# Plantillas

./: README.md
Plantillas_ws/src/: diferencias_ros1_vs_ros2.txt
Plantillas_ws/src/plantilla_cpp/: CMakeLists.txt  package.xml
Plantillas_ws/src/plantilla_cpp/description/: lidar.xacro  robot.urdf.xacro
Plantillas_ws/src/plantilla_cpp/launch/: launch_sim.launch.py
Plantillas_ws/src/plantilla_py/: package.xml  setup.cfg  setup.py
Plantillas_ws/src/plantilla_py/launch/: ejemplo_launch.py
Plantillas_ws/src/plantilla_py/src/: nodo_ejemplo.py
Plantillas_ws/src/plantilla_ros1/: CMakeLists.txt  package.xml
Plantillas_ws/src/plantilla_ros1/launch/: ejemplo.launch
Plantillas_ws/src/plantilla_ros1/src/: nodo_ejemplo_cpp.cpp  nodo_ejemplo_py.py  nodo_red_neuronal.cpp
