<?xml version="1.0"?>
<package format="2">
  <name>cambiar_nombre</name>
  <version>0.1.0</version>
  <description>¿Qué hace este paquete?</description>

  <maintainer email="correo@example.com">Tu Nombre</maintainer>
  <author email="correo@example.com">Tu Nombre</author>
  <license>MIT</license>

  <url type="website">http://wiki.ros.org/cambiar_nombre</url>
  <url type="repository">https://github.com/tu_usuario/cambiar_nombre</url>

  <!-- Dependencias de compilación -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>message_generation</build_depend>

  <!-- Dependencias de ejecución -->
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Dependencias exportadas para otros paquetes -->
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <!-- Dependencias para pruebas -->
  <test_depend>roslint</test_depend>

  <export>
    <!-- Espacio para herramientas adicionales -->
  </export>
</package>
